Another round of "Quick Fixes" to warnings
Signed-off-by: currantw <taylor.curran@improving.com>